--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,7 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AplicacionesPMDM"
         tools:targetApi="31">
-
+        <activity
+            android:name=".SuperheroApp.DetailSuperheroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SuperheroApp.SuperheroListActivity"
+            android:exported="false" />
         <activity
             android:name=".MenuActivity"
             android:exported="true">
@@ -24,20 +31,20 @@
         </activity>
         <activity
             android:name=".MessageApp.MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MessageApp.HelloActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".IMCapp.IMCactivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".IMCapp.ResultActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".BoardGamesApp.BoardGamesActivity"
-            android:theme="@style/Theme.BoardgamesApp"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.BoardgamesApp" />
     </application>
 
 </manifest>
